# jetson-fan-ctl

./: .gitignore  LICENSE  README.md  automagic-fan.service  config.json  fanctl.py  install.sh  setup.cfg  uninstall.sh
src/jetson-fan-ctl/: fanctl.py
src/jetsonfanctl/: command_line.py  jetsonfanctl.py
