[metadata]
name = jetsonfanctl
version = 0.1.0
author = Pyrestone
author_email = author@example.com
description = Automagic fan control for the Nvidia Jetson Nano
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Pyrestone/jetson-fan-ctl
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts=
  jetsonfanctl=jetsonfanctl.command_line:main

[options.packages.find]
where = src
